Fixed post table body truncation with index correction

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -94,6 +94,7 @@ tsnip {
 .custom {
   .text-truncate {
       max-width: 100%;
+      overflow: hidden;
   }
 }
 .container {
